change mother remains search schema
instead of using point of interests this searches matching adjacent blocks (might need a performance boost)